--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,56 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        h6 {
+            font-size: 15px
+        }
         .h2-text {
             color: red
+        }
+        .h6 {
+            color: yellow
+        }
+
+        #h1-text {
+            font-size: 50px
+        }
+
+        div.python > a {
+            color: green
+        }
+
+        ul li {
+            color: green
+        }
+
+        input[type="text"] {
+            background-color: red
+        }
+
+        input[type="text"]:hover {
+            background-color: pink
+        }
+
+        a:hover {
+            color: red
+        }
+
+        li::marker {
+            color: red
+        }
+
+        ul > li:nth-child(2) {
+            color: blue
         }
     </style>
 </head>
 <body>
-<div>
+<div class="python">
     <h1 id="h1-text">H1 text</h1>
+    <h1>H1 text</h1>
     <h2 class="h2-text">H2 text</h2>
     <h3>H3 text</h3>
-    <h6>H6 text</h6>
+    <h6 class="h2-text h6-text">H6 text</h6>
     <p>text text text text text texttext text text text text texttext text text text text texttext text text text text
         texttext text text text text text</p>
     <a href="https://playwright.dev/python/" target="_blank">Python</a>
@@ -57,6 +96,17 @@
         </tr>
         </tbody>
     </table>
+    <div class="nth">
+        <p>1</p>
+        <p>2</p>
+        <h6>3</h6>
+        <h5>4</h5>
+        <p>5</p>
+    </div>
+</div>
+<div class="java-script">
+    <h2 class="h2-text">H2 text</h2>
+    <a href="https://playwright.dev/python/" target="_blank">JavaScript</a>
 </div>
 </body>
 </html>
