--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 <div class="python">
     <h1 id="h1-text">H1 text</h1>
     <h1>H1 text</h1>
-    <h2 class="h2-text">H2 text</h2>
+    <h2 class="hh2-text">H2 text</h2>
     <h3>H3 text</h3>
     <h6 class="h2-text h6-text">H6 text</h6>
     <p>text text text text text texttext text text text text texttext text text text text texttext text text text text
